--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -10,5 +10,70 @@
   "shopping_cart": "سلة التسوق",
   "my_orders": "طلباتي",
   "about_us": "من نحن",
-  "logout": "تسجيل الخروج"
+  "logout": "تسجيل الخروج",
+  "signout": "تسجيل الخروج",
+  "lang": "اللغة",
+  "search_for_products": "أبحث عن المنتجات",
+  "search": "البحث ...",
+  "quantity": "الكمية",
+  "egp": "ج.م",
+  "total": "الإجمالي",
+  "complete_order": "إتمام الطلب",
+  "my_info": "بيانات",
+  "products": "المنتجات",
+  "first_name": "الإسم الأول",
+  "last_name": "الإسم الأخير",
+  "phone": "رقم التليفون",
+  "city": "المدينة",
+  "total_shipping_is": "قيمة الشحن هي :",
+  "address": "العنوان",
+  "subtotal": "المجموع",
+  "back": "رجوع",
+  "notes": "ملاحظات",
+  "back_to_home_page": "رجوع إلي الصفحة الرئيسية",
+  "email": "البريد الإلكتروني",
+  "username": "إسم المستخدم",
+  "no_orders_yet": "لا يوجد طلبات حتي الآن",
+  "total_shipping": "إجمالي الشحن",
+  "paying_method": "طريقة الدفع",
+  "order_date": "تاريخ الطلب",
+  "open_site": "زور الموقع",
+  "about_us_text": "خصومات دوت كوم, هو موقع للتجارة الإلكترونية في جمهوريه مصر العربيه ويضم عدد كبير من المنتجات المختلفه مثل الفئات التي تشمل الإلكترونيات، والأزياء، والمنتجات المنزلية، والساعات،والعطور، وغيرها.ويجذب خصومات دوت كوم عدد كبير من الزائرين شهرياً،وينموبسرعة كبيرة بسبب ازدياد عدد المتسوقين عبر شبكة الإنترنت في جمهوريه مصر العربيه .غالباً ما يسمى خصومات دوت كوم بـ بموطن الخصومات وهو يعمل كموقع للبيع بالتجزئة بالإضافة إلى عمله كسوق للبائعين من جهات خارجية. ويقدم خصومات دوت كوم تجربة تسوق مريحة وآمنة مع إمكانية الدفع عبر الإنترنت، وإمكانية الدفع نقداً عند استلام السلع، وإمكانية إرجاعها مجاناً.تأسس خصومات دوت كوم عام 2021، وهو رائداً في مجال التسوق عبر الإنترنت كموقع خدمي متكامل ، يتيح مجموعه من الخدمات الالكترونيه للزائرين. و بالإضافة إلى مقره الرئيسي في جمهوريه مصر العربيه يلبي خصومات دوت كوم احتياجات الأسواق المحلية بمكاتب تجارية في اغلب محافظات جمهوريه مصر العربيه نسعي جاهدين الي التغيير والتطوير الدائم للموقع مما يتيح الراحه للمستخدمين الموقع او التطبيق الخاص بنا تطور الشعار الخاص بنا",
+  "no_items_in_cart": "السلة تبدو فارغه",
+  "delete_all_products_from_wishlist": "حذف جميع المنتجات المفضلة",
+  "skip": "تخطي",
+  "sign_in_to_your_account": "سجل الدخول إلي حسابك",
+  "shopping_pleasure_with_khsomat": "للتسوق متعة مع خصومات",
+  "sign_in": "سجل الدخول",
+  "create_account_now": "إنشئ حساب الآن",
+  "password": "كلمة السر",
+  "username_or_email": "إسم المستخدم أو البريد الإلكتروني",
+  "create_new_account": "إنشاء حساب جديد",
+  "discover_the_real_meaning_of_offers": "إكتشف معني العروض الحقيقي مع خصومات",
+  "create_account": "إنشاء الحساب",
+  "already_have_an_account": "لديك حساب بالفعل ؟",
+  "Optional_info": "معلومات اختياريه",
+  "empty_wishlist": "قائمة المفضلة فارغة ...",
+  "egyption_pound": "جنية مصري",
+  "instead_of": "بدلاً من",
+  "description": "وصف المنتج",
+  "add_to_cart": "إضافة إلي السلة",
+  "related_products": "منتجات مشابهه",
+  "continuee": "متابعة",
+  "dont_have_an_account": "لا تمتلك حساب ؟",
+  "update_my_info": "تحديث بياناتي",
+  "account_created_successfully": "تم إنشاء الحساب بنجاح",
+  "create_error_toast": "رجاء إدخال اسم مستخدم و كلمة مرور و بريد إلكتروني آخر",
+  "must_enter_firstname": "يجب إدخال إسم الأول",
+  "must_enter_lastname": "يجب إدخال إسم الأخير",
+  "must_enter_email": "يجب إدخال البريد الإلكتروني",
+  "must_enter_validate_email": "يجب إدخال بريد إلكتروني صحيح",
+  "must_enter_password": "يجب إدخال كلمة المرور",
+  "must_enter_username": "يجب إدخال إسم المستخدم",
+  "must_enter_phone": "يجب إدخال رقم التليفون",
+  "phone_validate": "رقم التليفون يجب أن يكون مكون من 11 رقم",
+  "phone_vaildate2": "يجب أن يبدأ رقم التليفون ب *********01",
+  "must_enter_city": "يجب إدخال المدينة",
+  "must_enter_address": "يجب إدخال العنوان",
+  "must_enter_all_prev_info": "يجب إدخال جميع البيانات السابقة."
 }
