--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -10,5 +10,70 @@
   "shopping_cart": "Shopping Cart",
   "my_orders": "My Orders",
   "about_us": "About us",
-  "logout": "Logout"
+  "logout": "Logout",
+  "signout": "Sign out",
+  "lang": "Language",
+  "search_for_products": "Search for products",
+  "search": "Search ...",
+  "quantity": "Quantity",
+  "egp": "EGP",
+  "total": "Total",
+  "complete_order": "Complete Order",
+  "my_info": "My Info",
+  "products": "Products",
+  "first_name": "First name",
+  "last_name": "Last name",
+  "phone": "Phone Number",
+  "city": "City",
+  "total_shipping_is": "Total Shipping is : ",
+  "address": "Address",
+  "subtotal": "Subtotal",
+  "back": "Back",
+  "notes": "Notes",
+  "back_to_home_page": "Back to home page",
+  "email": "email",
+  "username": "username",
+  "no_orders_yet": "No orders yet",
+  "total_shipping": "Shipping price",
+  "paying_method": "Payment Method",
+  "order_date": "Order Date",
+  "open_site": "Open Site",
+  "about_us_text": "Khsomat.com, is an e-commerce site in the Arab Republic of Egypt and includes a large number of different products such as categories that include electronics, fashion, household products, watches, perfumes, and others. Dotcom discounts attract a large number of visitors per month, and it grows very quickly due to the increase in the number of Online shoppers in Egypt. Khsomat.com is often called the home of discounts and it functions as a retail site in addition to serving as a marketplace for third-party sellers. Dotcom discounts offers a convenient and safe shopping experience with the ability to pay online, the ability to pay cash upon receipt of goods, and the possibility of returning them for free. Khsomat.com was established in 2021, and it is a pioneer in the field of online shopping as an integrated service site, providing a range of electronic services to visitors. In addition to being headquartered in the Arab Republic of Egypt, Khsomat.com meets the needs of local markets with commercial offices in most governorates of the Arab Republic of Egypt. We strive to change and permanently develop the site, which provides convenience for users. Our site or application develops our logo",
+  "no_items_in_cart": "No Items in shopping cart",
+  "delete_all_products_from_wishlist": "Delete all products from favorites",
+  "skip": "Skip",
+  "sign_in_to_your_account": "Sign in to your Account",
+  "shopping_pleasure_with_khsomat": "Shopping pleasure with Khsomat",
+  "sign_in": "Sign in",
+  "create_account_now": "Create account now",
+  "password": "Password",
+  "username_or_email": "username or email",
+  "create_new_account": "Create new account",
+  "discover_the_real_meaning_of_offers": "Discover the real meaning of offers",
+  "create_account": "Create account",
+  "already_have_an_account": "already have an account ?",
+  "Optional_info": "Optional Information",
+  "empty_wishlist": "Favorites is empty",
+  "egyption_pound": "EGP",
+  "instead_of": "instead of",
+  "description": "Description",
+  "add_to_cart": "Add to cart",
+  "related_products": "Related Products",
+  "continuee": "Continue",
+  "dont_have_an_account": "don\\'t have an account ?",
+  "update_my_info": "Update My Info",
+  "account_created_successfully": "Account Created Successfully",
+  "create_error_toast": "Please enter another username or password",
+  "must_enter_firstname": "First name must be entered",
+  "must_enter_lastname": "Last name must be entered",
+  "must_enter_email": "Email must be entered",
+  "must_enter_validate_email": "Valid email must be entered",
+  "must_enter_password": "Password must be entered",
+  "must_enter_username": "Username must be entered",
+  "must_enter_phone": "Phone must be entered",
+  "phone_validate": "Phone number must be 11 digits",
+  "phone_vaildate2": "Phone number must be start with 01*********",
+  "must_enter_city": "City must be entered",
+  "must_enter_address": "Address must be entered",
+  "must_enter_all_prev_info": "All Previous Information must be entered"
 }
